# rosetta-csv-ingest

./: .codespellignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  ingest-generator.py  ingest_generator.py  pyproject.toml  tox.ini
.github/workflows/: release.yml  unit-tests-all.yml
requirements/: local.txt
rosetta-configs/: linz-rosetta-csv-mapping.cfg  new-rosetta-csv-mapping.cfg  old-rosetta-csv-mapping.cfg  rosetta-csv-basic-getty-fixity.cfg  rosetta-csv-basic-getty.cfg  rosetta-csv-mapping-events.cfg  rosetta-csv-mapping.cfg
rosetta-csv-field-notes/: rosetta-fields.txt
rosetta-schemas/: rosetta-csv-validation-schema-anz.json  rosetta-csv-validation-schema-exlib-basic-fixity-getty.json  rosetta-csv-validation-schema-exlib-basic-getty.json  rosetta-csv-validation-schema-linz.json  rosetta-csv-validation-schema-with-events-anz.json
src/rosetta_csv/: RosettaCSVGenerator.py  droid_csv_handler.py  droidcsvhandlerclass.py  rosetta_csv_generator.py  rosetta_csv_sections.py  rosettacsvsectionsclass.py  rosseta_csv.py
src/rosetta_csv/json_table_schema/: JsonTableSchema.py  csvdatatypes.py  json_table_schema.py
tests/: test_ingest_generation.py
